切换JDK21，javax包替换