@@ -30,11 +30,12 @@ import org.springframework.data.domain.Page;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.servlet.http.HttpServletResponse;
-import javax.validation.Valid;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.Valid;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -102,7 +103,7 @@ public class RoleController extends CruxBaseController {
     public void exportRole(@ApiParam(value = "角色ID")  @PathVariable long id, HttpServletResponse response)throws IOException {
         response.setContentType("application/vnd.ms-excel;charset=utf-8");
         response.setCharacterEncoding("utf-8");
-        String fileName = URLEncoder.encode("角色信息导出", "UTF-8").replaceAll("\\+", "%20");
+        String fileName = URLEncoder.encode("角色信息导出", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         response.setHeader("Content-Disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
         roleService.exportRole(id,response.getOutputStream());
     }
